# KeyScribe

./: .gitignore  .transcriber_state.json  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release-on-tag.yml
python/src/: beat_this_runner.py  create_model.py  demucs_runner.py  pyproject.toml  visualize_beats.py
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  setup.ps1  setup.sh
src/: .transcriber_state.json  analysis.rs  app.rs  audio_io.rs  beat_this.rs  cqt.rs  demucs.rs  demucs_tests.rs  dsp.rs  inference.rs  lib.rs  main.rs  pipeline.rs  playback.rs  preprocessing.rs  ring_buffer.rs  theme.rs  viterbi.rs
src/app/: cache.rs  export.rs  loading.rs  media_controls.rs  playback.rs  processing.rs  runtime.rs  sheet_music.rs  top_controls.rs  update.rs  video_player.rs
src/core/: processing.rs
src/leadsheet/: beat_association.rs  beat_tracking.rs  bpm.rs  chord.rs  instrument_separation.rs  joint_tracker.rs  mod.rs  preset.rs  quantize.rs  tempo_map.rs  types.rs
src/ui/: keyboard.rs  mod.rs  utils.rs  widgets.rs
