[package]
name = "transcriber"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop-ui"]
desktop-ui = [
	"dep:eframe",
	"dep:egui_plot",
	"dep:egui-phosphor",
	"dep:image",
	"dep:rfd",
	"dep:rodio",
]

[dependencies]
anyhow = "1.0"
eframe = { version = "0.27", optional = true }
egui_plot = { version = "0.27", optional = true }
egui-phosphor = { version = "0.5", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"], optional = true }
rfd = { version = "0.14", optional = true }
rodio = { version = "0.19", optional = true }
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
zstd = "0.13"
directories = "5.0"
symphonia = { version = "0.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
signalsmith-stretch = "0.1.3"

# HFSFormer pipeline dependencies
ort = "2.0.0-rc.12"
ndarray = "0.16"
ndarray-stats = "0.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
rayon = "1.9"
thiserror = "1.0"
