[package]
name = "keyscribe"
version = "0.3.1"
edition = "2021"

[lib]
name = "keyscribe_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = ["desktop-ui"]
native-ui = [
	"dep:eframe",
	"dep:egui_plot",
	"dep:egui-phosphor",
	"dep:image",
	"dep:rodio",
]
desktop-ui = [
	"native-ui",
	"dep:rfd",
]

[dependencies]
anyhow = "1.0"
eframe = { version = "0.27", optional = true }
egui_plot = { version = "0.27", optional = true }
egui-phosphor = { version = "0.5", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "webp"], optional = true }
rfd = { version = "0.14", optional = true }
rodio = { version = "0.19", optional = true }
rustfft = "6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
zstd = "0.13"
directories = "5.0"
symphonia = { version = "0.5", features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
signalsmith-stretch = "0.1.3"
musicxml = "1.1"

# HFSFormer pipeline dependencies
# ONNX Runtime loaded dynamically from a Microsoft official GPU build.
# We ship onnxruntime.dll + onnxruntime_providers_cuda.dll (downloaded from
# the onnxruntime-gpu pip wheel) alongside the executable. This avoids the
# ort-sys prebuilt binaries which had a CUDA version mismatch issue.
# `load-dynamic` loads onnxruntime.dll at runtime via libloading; we call
# `ort::init_from()` to point it at our bundled DLL.
ort = { version = "2.0.0-rc.12", features = ["load-dynamic", "ndarray", "api-24"], default-features = false }
ndarray = "0.16"
ndarray-stats = "0.5"
crossbeam-channel = "0.5"
parking_lot = "0.12"
rayon = "1.9"
thiserror = "1.0"
verovioxide = "0.3.0"

# Beat tracking (replaces beat_this_final0.onnx)
beat-this = "1.0.0"

roxmltree = "0.20"
midly = "0.5.3"
hound = "3.5.1"

[build-dependencies]
winresource = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
ico = "0.4"
